Changes made from the "0.3" release to the "0.4" release:
-----------------------------------------------------------

- Quesoglc now uses autotools to build
- Thomas Zimmermann fixed the string measurement commands that did not return
  results that were consistent with those returned by glcCharMetric().
- Fixed a bug in glcDeleteFont() where the face was not closed before the font
  was deleted.
- Display lists are now managed at the charmap level instead of being handled by
  the masters. This allows a better management and optimizes the GPU memory
  management by deleting display lists and textures as soon as the corresponding
  glyph is removed.
- Charmaps now use binary search instead of linear search
- Texture mipmap levels in GLC_TEXTURE style are now built directly by QuesoGLC
  instead of using GLU. It should provide better rendering quality at small
  pixel sizes
- The z coordinate of bounding boxes is now also used to determine if a Bezier
  curve lies outside the viewport
- Calculations now use GLfloat instead of GLdouble
- Removed the useless third coordinate of the vertex array used for GLC_LINE
  and GLC_TRIANGLE styles
- Fixed a bug where the advance of a glyph that is skipped because it lies
  outside the viewport were not taken into account
- Unified the behaviour of the rendering and measuring routines so that the
  later now take into account the state of GLC_HINTING_QSO.
- Removed the file 'constant.h'
- Added the enumerant GLC_HINTING_QSO to the glEnable()/glDisable() functions
  to allow the user to activate hinting when glyphs are rendered at small pixel
  sizes. By default, hinting is disabled because it creates visual artifacts
  when the glyphs are animated.
- In order to accelerate the rendering of characters, glyphs which bounding box
  lies outside the viewport are now skipped.
- In GLC_TEXTURE mode, no mipmap is built anymore if the glyph is rendered in
  immediate mode (that is if GLC_GL_OBJECTS is disabled and the user is not