@@ -1,6 +1,9 @@
 Changes made from the "0.3" release to the "0.4" release:
 -----------------------------------------------------------
 
+- Fixed the crashes due to the removal of the combine callback of the GLU
+  tesselator. The callback is now restored and compatible with the arrays of
+  variable size (__glcArray)
 - Quesoglc now uses autotools to build
 - Thomas Zimmermann fixed the string measurement commands that did not return
   results that were consistent with those returned by glcCharMetric().
